# scholar-search

./: .gitignore  Cargo.toml  README.md
crates/scholar-search-pdf-service/: Cargo.toml
crates/scholar-search-search-service/: Cargo.toml
crates/scholar-search-web-server/: Cargo.toml
crates/scholar-search-web-server/src/: main.rs
crates/scholar-search-web-server/src/axum_server/: mod.rs
crates/scholar-search-web-server/src/axum_server/api/: pdf.rs
crates/scholar-search-web-server/src/axum_server/state/: mod.rs
crates/scholar-search-web-server/src/axum_server/template/: page_detail.rs
crates/scholar-search-web-server/src/semantic_scholar_api/: critions.rs  paper_fetch.rs
crates/scholar-search-web-server/templates/: _layout.html  partial_side_content.html  table.html
crates/schoolar-search-pdf-service/: Cargo.toml
src/: main.rs
src/axum_server/: mod.rs
src/axum_server/api/: pdf.rs
src/axum_server/state/: mod.rs
src/axum_server/template/: mod.rs  page_detail.rs  search_page.rs  table.rs
src/semantic_scholar_api/: critions.rs  data.rs  mod.rs  paper_fetch.rs
templates/: _layout.html  hello.html  paper_detail.html  partial_side_content.html  search.html  table.html  table_row.html
