[package]
name = "scholar-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = { version = "0.4", features = ["serde", "alloc"] }
polars = { version = "0.33.2", features = [
  "serde",
  "serde-lazy",
  "parquet",
  "object",
  "json",
  "csv",
  "rows",
  "sql",
  "lazy",
  "docs-selection",
] }

serde_derive = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_path_to_error = "0.1"

reqwest = { version = "*", features = [
  "json",
  "cookies",
  "brotli",
  "gzip",
  "deflate",
  "stream",
] }
prost = "0.12"
tokio = { version = "1", features = [
  "full",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.5"
axum = { version = "^0.6.20", features = ["json", "ws", "http2", "macros"] }
axum-extra = { version = "0.8.0", features = [
  "query",
  "erased-json",
  "json-lines",
  "typed-routing",
  "protobuf",
] }
axum-htmx = "0.3.0"

tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


lopdf = { version = "0.31.0", features = ["serde", "pom_parser", "nom_parser"] }
pdf-extract = "0.7.2"

regex = { version = "1.9.5", features = ["perf", "unicode"] }
convert_case = "0.6.0"
fast_symspell = "0.1.7"
# tch = "0.13.0"
# rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
# torch-sys = { version = "0.13.0", features = [
#   "download-libtorch",
#   "serde",
#   "serde_json",
# ] }


structopt = { version = "0.3.26", features = ["color", "suggestions"] }
glob = "0.3.1"
rand = "0.8.5"
query_map = { version = "0.7.0", features = ["url-query"] }

askama = { version = "0.12.1", features = ["serde-json", "markdown"] }
askama_axum = "0.3.0"

sled = "0.34.7"
ryaspeller = "*"